2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Set the mode of the UnicodeChecker as HTML5.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm (generate_source_string_section): Use |read|
	instead of |getc|.

2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for the Unicode character checking.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm (generate_structure_dump_section): Support
	for broken manifest.

	* H2H.pm: New module.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* CSS.pm (generate_structure_error_section): Make the method
	do nothing.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* CSS.pm, CacheManifest.pm, HTML.pm, XML.pm: Use ->url attribute to
	obtain the URL of the document.

	* CacheManifest.pm (generate_structure_dump_section): It is
	now i18n'ed.  In addition, since URLs are tend to be long,
	tables for fallback entries are replaced by |dd| entries and 
	paragraphs.  "No entry" message is now handled by catalog,
	rather than CSS.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (generate_syntax_error_section): Remove |input_encoding|
	attribute value if the input is specified by direct input.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* DOM.pm: Enable localization of RDF section.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* DOM.pm: Use error's own "layer" parameter, if any.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Set flags for encoding layer errors appropriately.
	Save link to the document root for the parsed document
	for garbage collection safety.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* CSS.pm, CacheManifest.pm, HTML.pm, WebIDL.pm, XML.pm: Don't
	set "uncertain" flag to character encoding (encode) layer if the
	input is a character string.

2008-08-14  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm, CSS.pm, CacheManifest.pm, DOM.pm, Default.pm, 
	HTML.pm, WebIDL.pm, XML.pm: Set |layer_applicable|
	or |layer_uncertain| flag appropriately.

2008-08-14  Wakaba  <wakaba@suika.fam.cx>